# job-market-analytics

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
ingestion/: __init__.py
ingestion/scripts/: __init__.py  create_raw_tables.py  fetch_adzuna.py  fetch_github.py  load_adzuna_raw.py  load_github_raw.py  test_snowflake_connection.py
ingestion/utils/: skills.py  snowflake.py
job_market_analytics/: .gitignore  README.md  dbt_project.yml  run_dbt.ps1
job_market_analytics/.dbt/: profiles.yml
job_market_analytics/models/marts/: mart_github_repo_momentum.sql  mart_salary_benchmarks.sql  mart_skill_demand.sql  marts.yml
job_market_analytics/models/staging/: sources.yml  stg_github_repos.sql  stg_job_postings.sql
job_market_analytics/seeds/: skills.csv
streamlit/: app.py
